Design: Fix footer navigation wrong gap

--- a/app/_components/common/footer/footer.module.scss
+++ b/app/_components/common/footer/footer.module.scss
@@ -13,14 +13,10 @@
   background: #fff;
 }
 
-.messageDiv {
-  position: relative;
-}
-
 .alarm {
   position: absolute;
-  left: 12px;
-  top: -6px;
+  left: 30.5%;
+  bottom: 57px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
